pattern_matcher/grammars/STIXPatternParser.py
# Generated from STIXPattern.g4 by ANTLR 4.5.3
# encoding: utf-8
from __future__ import print_function
from antlr4 import *
from io import StringIO



class STIXPatternParser ( Parser ):

    grammarFileName = "STIXPattern.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                     u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                     u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                     u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                     u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                     u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                     u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                     u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                     u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                     u"<INVALID>", u"'<'", u"'<='", u"'>'", u"'>='", u"'''", 
                     u"':'", u"'.'", u"','", u"')'", u"'('", u"']'", u"'['", 
                     u"'+'", u"<INVALID>", u"'-'", u"'^'", u"'/'", u"'*'" ]

    symbolicNames = [ u"<INVALID>", u"IntLiteral", u"FloatLiteral", u"HexLiteral", 
                      u"BinaryLiteral", u"StringLiteral", u"BoolLiteral", 
                      u"RegexLiteral", u"TimestampLiteral", u"AND", u"OR", 
                      u"NOT", u"FOLLOWEDBY", u"LIKE", u"MATCHES", u"ISSUPERSET", 
                      u"ISSUBSET", u"LAST", u"IN", u"START", u"STOP", u"MILLISECONDS", 
                      u"SECONDS", u"MINUTES", u"HOURS", u"DAYS", u"MONTHS", 
                      u"YEARS", u"TRUE", u"FALSE", u"NULL", u"WITHIN", u"REPEATS", 
                      u"TIMES", u"Identifier", u"EQ", u"NEQ", u"LT", u"LE", 
                      u"GT", u"GE", u"QUOTE", u"COLON", u"DOT", u"COMMA", 
                      u"RPAREN", u"LPAREN", u"RBRACK", u"LBRACK", u"PLUS", 
                      u"HYPHEN", u"MINUS", u"POWER_OP", u"DIVIDE", u"ASTERISK", 
                      u"WS", u"COMMENT", u"LINE_COMMENT" ]

    RULE_pattern = 0
    RULE_observationExpressions = 1
    RULE_observationExpressionOr = 2
    RULE_observationExpressionAnd = 3
    RULE_observationExpression = 4
    RULE_comparisonExpression = 5
    RULE_comparisonExpressionAnd = 6
    RULE_propTest = 7
    RULE_startStopQualifier = 8
    RULE_withinQualifier = 9
    RULE_repeatedQualifier = 10
    RULE_objectPath = 11
    RULE_objectType = 12
    RULE_firstPathComponent = 13
    RULE_objectPathComponent = 14
    RULE_setLiteral = 15
    RULE_primitiveLiteral = 16
    RULE_orderableLiteral = 17
    RULE_timeUnit = 18

    ruleNames =  [ u"pattern", u"observationExpressions", u"observationExpressionOr", 
                   u"observationExpressionAnd", u"observationExpression", 
                   u"comparisonExpression", u"comparisonExpressionAnd", 
                   u"propTest", u"startStopQualifier", u"withinQualifier", 
                   u"repeatedQualifier", u"objectPath", u"objectType", u"firstPathComponent", 
                   u"objectPathComponent", u"setLiteral", u"primitiveLiteral", 
                   u"orderableLiteral", u"timeUnit" ]

    EOF = Token.EOF
    IntLiteral=1
    FloatLiteral=2
    HexLiteral=3
    BinaryLiteral=4
    StringLiteral=5
    BoolLiteral=6
    RegexLiteral=7
    TimestampLiteral=8
    AND=9
    OR=10
    NOT=11
    FOLLOWEDBY=12
    LIKE=13
    MATCHES=14
    ISSUPERSET=15
    ISSUBSET=16
    LAST=17
    IN=18
    START=19
    STOP=20
    MILLISECONDS=21
    SECONDS=22
    MINUTES=23
    HOURS=24
    DAYS=25
    MONTHS=26
    YEARS=27
    TRUE=28
    FALSE=29
    NULL=30
    WITHIN=31
    REPEATS=32
    TIMES=33
    Identifier=34
    EQ=35
    NEQ=36
    LT=37
    LE=38
    GT=39
    GE=40
    QUOTE=41
    COLON=42
    DOT=43
    COMMA=44
    RPAREN=45
    LPAREN=46
    RBRACK=47
    LBRACK=48
    PLUS=49
    HYPHEN=50
    MINUS=51
    POWER_OP=52
    DIVIDE=53
    ASTERISK=54
    WS=55
    COMMENT=56
    LINE_COMMENT=57

    def __init__(self, input):
        super(STIXPatternParser, self).__init__(input)
        self.checkVersion("4.5.3")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class PatternContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(STIXPatternParser.PatternContext, self).__init__(parent, invokingState)
            self.parser = parser

        def observationExpressions(self):
            return self.getTypedRuleContext(STIXPatternParser.ObservationExpressionsContext,0)


        def getRuleIndex(self):
            return STIXPatternParser.RULE_pattern

        def enterRule(self, listener):
            if hasattr(listener, "enterPattern"):
                listener.enterPattern(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitPattern"):
                listener.exitPattern(self)




    def pattern(self):

        localctx = STIXPatternParser.PatternContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_pattern)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 38
            self.observationExpressions(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ObservationExpressionsContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(STIXPatternParser.ObservationExpressionsContext, self).__init__(parent, invokingState)
            self.parser = parser

        def observationExpressionOr(self):
            return self.getTypedRuleContext(STIXPatternParser.ObservationExpressionOrContext,0)


        def observationExpressions(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(STIXPatternParser.ObservationExpressionsContext)
            else:
                return self.getTypedRuleContext(STIXPatternParser.ObservationExpressionsContext,i)


        def FOLLOWEDBY(self):
            return self.getToken(STIXPatternParser.FOLLOWEDBY, 0)

        def getRuleIndex(self):
            return STIXPatternParser.RULE_observationExpressions

        def enterRule(self, listener):
            if hasattr(listener, "enterObservationExpressions"):
                listener.enterObservationExpressions(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitObservationExpressions"):
                listener.exitObservationExpressions(self)



    def observationExpressions(self, _p=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = STIXPatternParser.ObservationExpressionsContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 2
        self.enterRecursionRule(localctx, 2, self.RULE_observationExpressions, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 41
            self.observationExpressionOr(0)
            self._ctx.stop = self._input.LT(-1)
            self.state = 48
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,0,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = STIXPatternParser.ObservationExpressionsContext(self, _parentctx, _parentState)
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_observationExpressions)
                    self.state = 43
                    if not self.precpred(self._ctx, 2):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 2)")
                    self.state = 44
                    self.match(STIXPatternParser.FOLLOWEDBY)
                    self.state = 45
                    self.observationExpressions(3) 
                self.state = 50
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,0,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx

    class ObservationExpressionOrContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(STIXPatternParser.ObservationExpressionOrContext, self).__init__(parent, invokingState)
            self.parser = parser

        def observationExpressionAnd(self):
            return self.getTypedRuleContext(STIXPatternParser.ObservationExpressionAndContext,0)


        def observationExpressionOr(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(STIXPatternParser.ObservationExpressionOrContext)
            else:
                return self.getTypedRuleContext(STIXPatternParser.ObservationExpressionOrContext,i)


        def OR(self):
            return self.getToken(STIXPatternParser.OR, 0)

        def getRuleIndex(self):
            return STIXPatternParser.RULE_observationExpressionOr

        def enterRule(self, listener):
            if hasattr(listener, "enterObservationExpressionOr"):
                listener.enterObservationExpressionOr(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitObservationExpressionOr"):
                listener.exitObservationExpressionOr(self)



    def observationExpressionOr(self, _p=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = STIXPatternParser.ObservationExpressionOrContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 4
        self.enterRecursionRule(localctx, 4, self.RULE_observationExpressionOr, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 52
            self.observationExpressionAnd(0)
            self._ctx.stop = self._input.LT(-1)
            self.state = 59
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,1,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = STIXPatternParser.ObservationExpressionOrContext(self, _parentctx, _parentState)
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_observationExpressionOr)
                    self.state = 54
                    if not self.precpred(self._ctx, 2):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 2)")
                    self.state = 55
                    self.match(STIXPatternParser.OR)
                    self.state = 56
                    self.observationExpressionOr(3) 
                self.state = 61
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,1,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx

    class ObservationExpressionAndContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(STIXPatternParser.ObservationExpressionAndContext, self).__init__(parent, invokingState)
            self.parser = parser

        def observationExpression(self):
            return self.getTypedRuleContext(STIXPatternParser.ObservationExpressionContext,0)


        def observationExpressionAnd(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(STIXPatternParser.ObservationExpressionAndContext)
            else:
                return self.getTypedRuleContext(STIXPatternParser.ObservationExpressionAndContext,i)


        def AND(self):
            return self.getToken(STIXPatternParser.AND, 0)

        def getRuleIndex(self):
            return STIXPatternParser.RULE_observationExpressionAnd

        def enterRule(self, listener):
            if hasattr(listener, "enterObservationExpressionAnd"):
                listener.enterObservationExpressionAnd(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitObservationExpressionAnd"):
                listener.exitObservationExpressionAnd(self)



    def observationExpressionAnd(self, _p=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = STIXPatternParser.ObservationExpressionAndContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 6
        self.enterRecursionRule(localctx, 6, self.RULE_observationExpressionAnd, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 63
            self.observationExpression(0)
            self._ctx.stop = self._input.LT(-1)
            self.state = 70
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,2,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = STIXPatternParser.ObservationExpressionAndContext(self, _parentctx, _parentState)
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_observationExpressionAnd)
                    self.state = 65
                    if not self.precpred(self._ctx, 2):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 2)")
                    self.state = 66
                    self.match(STIXPatternParser.AND)
                    self.state = 67
                    self.observationExpressionAnd(3) 
                self.state = 72
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,2,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx

    class ObservationExpressionContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(STIXPatternParser.ObservationExpressionContext, self).__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return STIXPatternParser.RULE_observationExpression

     
        def copyFrom(self, ctx):
            super(STIXPatternParser.ObservationExpressionContext, self).copyFrom(ctx)


    class ObservationExpressionRepeatedContext(ObservationExpressionContext):

        def __init__(self, parser, ctx): # actually a STIXPatternParser.ObservationExpressionContext)
            super(STIXPatternParser.ObservationExpressionRepeatedContext, self).__init__(parser)
            self.copyFrom(ctx)

        def observationExpression(self):
            return self.getTypedRuleContext(STIXPatternParser.ObservationExpressionContext,0)

        def repeatedQualifier(self):
            return self.getTypedRuleContext(STIXPatternParser.RepeatedQualifierContext,0)


        def enterRule(self, listener):
            if hasattr(listener, "enterObservationExpressionRepeated"):
                listener.enterObservationExpressionRepeated(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitObservationExpressionRepeated"):
                listener.exitObservationExpressionRepeated(self)


    class ObservationExpressionSimpleContext(ObservationExpressionContext):

        def __init__(self, parser, ctx): # actually a STIXPatternParser.ObservationExpressionContext)
            super(STIXPatternParser.ObservationExpressionSimpleContext, self).__init__(parser)
            self.copyFrom(ctx)

        def LBRACK(self):
            return self.getToken(STIXPatternParser.LBRACK, 0)
        def comparisonExpression(self):
            return self.getTypedRuleContext(STIXPatternParser.ComparisonExpressionContext,0)

        def RBRACK(self):
            return self.getToken(STIXPatternParser.RBRACK, 0)

        def enterRule(self, listener):
            if hasattr(listener, "enterObservationExpressionSimple"):
                listener.enterObservationExpressionSimple(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitObservationExpressionSimple"):
                listener.exitObservationExpressionSimple(self)


    class ObservationExpressionCompoundContext(ObservationExpressionContext):

        def __init__(self, parser, ctx): # actually a STIXPatternParser.ObservationExpressionContext)
            super(STIXPatternParser.ObservationExpressionCompoundContext, self).__init__(parser)
            self.copyFrom(ctx)

        def LPAREN(self):
            return self.getToken(STIXPatternParser.LPAREN, 0)
        def observationExpressions(self):
            return self.getTypedRuleContext(STIXPatternParser.ObservationExpressionsContext,0)

        def RPAREN(self):
            return self.getToken(STIXPatternParser.RPAREN, 0)

        def enterRule(self, listener):
            if hasattr(listener, "enterObservationExpressionCompound"):
                listener.enterObservationExpressionCompound(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitObservationExpressionCompound"):
                listener.exitObservationExpressionCompound(self)


    class ObservationExpressionWithinContext(ObservationExpressionContext):

        def __init__(self, parser, ctx): # actually a STIXPatternParser.ObservationExpressionContext)
            super(STIXPatternParser.ObservationExpressionWithinContext, self).__init__(parser)
            self.copyFrom(ctx)

        def observationExpression(self):
            return self.getTypedRuleContext(STIXPatternParser.ObservationExpressionContext,0)

        def withinQualifier(self):
            return self.getTypedRuleContext(STIXPatternParser.WithinQualifierContext,0)


        def enterRule(self, listener):
            if hasattr(listener, "enterObservationExpressionWithin"):
                listener.enterObservationExpressionWithin(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitObservationExpressionWithin"):
                listener.exitObservationExpressionWithin(self)


    class ObservationExpressionStartStopContext(ObservationExpressionContext):

        def __init__(self, parser, ctx): # actually a STIXPatternParser.ObservationExpressionContext)
            super(STIXPatternParser.ObservationExpressionStartStopContext, self).__init__(parser)
            self.copyFrom(ctx)

        def observationExpression(self):
            return self.getTypedRuleContext(STIXPatternParser.ObservationExpressionContext,0)

        def startStopQualifier(self):
            return self.getTypedRuleContext(STIXPatternParser.StartStopQualifierContext,0)


        def enterRule(self, listener):
            if hasattr(listener, "enterObservationExpressionStartStop"):
                listener.enterObservationExpressionStartStop(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitObservationExpressionStartStop"):
                listener.exitObservationExpressionStartStop(self)



    def observationExpression(self, _p=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = STIXPatternParser.ObservationExpressionContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 8
        self.enterRecursionRule(localctx, 8, self.RULE_observationExpression, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 82
            token = self._input.LA(1)
            if token in [STIXPatternParser.LBRACK]:
                localctx = STIXPatternParser.ObservationExpressionSimpleContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx

                self.state = 74
                self.match(STIXPatternParser.LBRACK)
                self.state = 75
                self.comparisonExpression(0)
                self.state = 76
                self.match(STIXPatternParser.RBRACK)

            elif token in [STIXPatternParser.LPAREN]:
                localctx = STIXPatternParser.ObservationExpressionCompoundContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 78
                self.match(STIXPatternParser.LPAREN)
                self.state = 79
                self.observationExpressions(0)
                self.state = 80
                self.match(STIXPatternParser.RPAREN)

            else:
                raise NoViableAltException(self)

            self._ctx.stop = self._input.LT(-1)
            self.state = 92
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,5,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 90
                    self._errHandler.sync(self);
                    la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
                    if la_ == 1:
                        localctx = STIXPatternParser.ObservationExpressionStartStopContext(self, STIXPatternParser.ObservationExpressionContext(self, _parentctx, _parentState))
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_observationExpression)
                        self.state = 84
                        if not self.precpred(self._ctx, 3):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 3)")
                        self.state = 85
                        self.startStopQualifier()
                        pass

                    elif la_ == 2:
                        localctx = STIXPatternParser.ObservationExpressionWithinContext(self, STIXPatternParser.ObservationExpressionContext(self, _parentctx, _parentState))
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_observationExpression)
                        self.state = 86
                        if not self.precpred(self._ctx, 2):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 2)")
                        self.state = 87
                        self.withinQualifier()
                        pass

                    elif la_ == 3:
                        localctx = STIXPatternParser.ObservationExpressionRepeatedContext(self, STIXPatternParser.ObservationExpressionContext(self, _parentctx, _parentState))
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_observationExpression)
                        self.state = 88
                        if not self.precpred(self._ctx, 1):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 1)")
                        self.state = 89
                        self.repeatedQualifier()
                        pass

             
                self.state = 94
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,5,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx

    class ComparisonExpressionContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(STIXPatternParser.ComparisonExpressionContext, self).__init__(parent, invokingState)
            self.parser = parser

        def comparisonExpressionAnd(self):
            return self.getTypedRuleContext(STIXPatternParser.ComparisonExpressionAndContext,0)


        def comparisonExpression(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(STIXPatternParser.ComparisonExpressionContext)
            else:
                return self.getTypedRuleContext(STIXPatternParser.ComparisonExpressionContext,i)


        def OR(self):
            return self.getToken(STIXPatternParser.OR, 0)

        def getRuleIndex(self):
            return STIXPatternParser.RULE_comparisonExpression

        def enterRule(self, listener):
            if hasattr(listener, "enterComparisonExpression"):
                listener.enterComparisonExpression(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitComparisonExpression"):
                listener.exitComparisonExpression(self)



    def comparisonExpression(self, _p=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = STIXPatternParser.ComparisonExpressionContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 10
        self.enterRecursionRule(localctx, 10, self.RULE_comparisonExpression, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 96
            self.comparisonExpressionAnd(0)
            self._ctx.stop = self._input.LT(-1)
            self.state = 103
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,6,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = STIXPatternParser.ComparisonExpressionContext(self, _parentctx, _parentState)
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_comparisonExpression)
                    self.state = 98
                    if not self.precpred(self._ctx, 2):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 2)")
                    self.state = 99
                    self.match(STIXPatternParser.OR)
                    self.state = 100
                    self.comparisonExpression(3) 
                self.state = 105
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,6,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx

    class ComparisonExpressionAndContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(STIXPatternParser.ComparisonExpressionAndContext, self).__init__(parent, invokingState)
            self.parser = parser

        def propTest(self):
            return self.getTypedRuleContext(STIXPatternParser.PropTestContext,0)


        def comparisonExpressionAnd(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(STIXPatternParser.ComparisonExpressionAndContext)
            else:
                return self.getTypedRuleContext(STIXPatternParser.ComparisonExpressionAndContext,i)


        def AND(self):
            return self.getToken(STIXPatternParser.AND, 0)

        def getRuleIndex(self):
            return STIXPatternParser.RULE_comparisonExpressionAnd

        def enterRule(self, listener):
            if hasattr(listener, "enterComparisonExpressionAnd"):
                listener.enterComparisonExpressionAnd(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitComparisonExpressionAnd"):
                listener.exitComparisonExpressionAnd(self)


